--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(sim3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(sim3 ConstexprSimulator.cc)
+add_executable(sim3 ConstexprSimulator.cc
+                    OpcodesRaw.h)
