--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ else()
     add_compile_options(-Wall -Wextra)
 endif()
 add_executable(sim3 Simulator.cc
-                    OpcodesRaw.h main.cc Core.h Core.cc Types.h Instruction.h Register.h)
+                    OpcodesRaw.h main.cc Core.h Core.cc Types.h Instruction.h Register.h Register.cc)
