Drop Simulator.cc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ if (MSVC)
 else()
     add_compile_options(-Wall -Wextra)
 endif()
-add_executable(sim3 Simulator.cc
-                    OpcodesRaw.h main.cc Core.h Core.cc Types.h Instruction.h Register.h Register.cc)
+add_executable(sim3
+        OpcodesRaw.h main.cc Core.h Core.cc Types.h Instruction.h Register.h Register.cc)
