Make a stupid simple core design

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,11 @@ else()
     add_compile_options(-Wall -Wextra)
 endif()
 add_library(sim3core
-        OpcodesRaw.h Core.h Core.cc Types.h Instruction.h Register.h Register.cc SimplifiedSxCore.cc SimplifiedSxCore.h)
+        OpcodesRaw.h Core.h Core.cc Types.h Instruction.h Register.h Register.cc SimplifiedSxCore.cc SimplifiedSxCore.h sim3sx.cc)
 add_executable(sim3_zct
         main.cc)
-#add_executable(sim3_sx
-#                sim3sx.cc)
+add_executable(sim3_sx
+                sim3sx.cc)
 
 target_link_libraries(sim3_zct sim3core)
-#target_link_libraries(sim3_sx sim3core)
+target_link_libraries(sim3_sx sim3core)
