include iostream for sbcore

--- a/platformio.ini
+++ b/platformio.ini
@@ -69,3 +69,10 @@ platform = native
 build_flags =
     ${env.build_flags}
     -DDESKTOP_BUILD
+
+
+[env:adafruit_grandcentral_m4]
+platform = atmelsam
+framework = arduino
+
+board = adafruit_grandcentral_m4
