use the adafruit fork of the grand central m4

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,7 @@
 [platformio]
-default_envs = desktop
+default_envs = desktop, adafruit_grandcentral_m4
+
 [common]
-
-
 
 [env]
 build_unflags =
@@ -40,7 +39,7 @@ monitor_speed = 9600
 
 lib_deps =
     ${env.lib_deps}
-    greiman/SdFat
+    greiman/sdfat
 
 [env:1284p_fuses_bootloader]
 platform = atmelavr
@@ -78,6 +77,6 @@ platform = atmelsam
 framework = arduino
 
 board = adafruit_grandcentral_m4
-
 lib_deps =
     ${env.lib_deps}
+    adafruit/SdFat - Adafruit Fork
