--- a/platformio.ini
+++ b/platformio.ini
@@ -28,3 +28,12 @@ board = adafruit_grandcentral_m4
 lib_deps =
     ${env.lib_deps}
     adafruit/SdFat - Adafruit Fork
+
+
+[env:adafruit_feather_nrf52832]
+platform = nordicnrf52
+board = adafruit_feather_nrf52832
+framework = arduino
+lib_deps =
+    ${env.lib_deps}
+    greiman/SdFat
