Define the header for the NRF52832FeatherSBCore

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,10 @@ lib_deps =
 platform = nordicnrf52
 board = adafruit_feather_nrf52832
 framework = arduino
+build_flags =
+    ${env.build_flags}
+    -DARDUINO_NRF52832_FEATHER
+
 lib_deps =
     ${env.lib_deps}
     greiman/SdFat
