Emulator trace enabled for nrf52832

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,6 +39,7 @@ framework = arduino
 build_flags =
     ${env.build_flags}
     -DARDUINO_NRF52832_FEATHER
+    -DEMULATOR_TRACE
 
 lib_deps =
     ${env.lib_deps}
