Include more keyboard featherwing libraries

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,4 +42,10 @@ build_flags =
 
 lib_deps =
     ${env.lib_deps}
+    Wire
     greiman/SdFat
+    adafruit/Adafruit BusIO
+    adafruit/Adafruit GFX Library
+    adafruit/Adafruit ILI9341
+    solderparty/TSC2004
+    adafruit/Adafruit NeoPixel
