--- a/platformio.ini
+++ b/platformio.ini
@@ -49,3 +49,21 @@ lib_deps =
     adafruit/Adafruit ILI9341
     solderparty/TSC2004
     adafruit/Adafruit NeoPixel
+
+[env:adafruit_feather_m0_adalogger]
+platform = atmelsam
+board = adafruit_feather_m0
+framework = arduino
+build_flags =
+    ${env.build_flags}
+    -DARDUINO_FEATHER_M0_ADALOGGER
+
+lib_deps =
+    ${env.lib_deps}
+    Wire
+    greiman/SdFat
+    adafruit/Adafruit BusIO
+    adafruit/Adafruit GFX Library
+    adafruit/Adafruit ILI9341
+    solderparty/TSC2004
+    adafruit/Adafruit NeoPixel
