--- a/platformio.ini
+++ b/platformio.ini
@@ -61,3 +61,14 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     greiman/SdFat
+
+[env:1284p]
+platform = atmelavr
+board = ATmega1284P
+framework = arduino
+board_build.mcu = atmega1284p
+board_build.f_cpu = 20000000L
+
+lib_deps =
+    ${env.lib_deps}
+    greiman/SdFat
