--- a/platformio.ini
+++ b/platformio.ini
@@ -72,3 +72,12 @@ board_build.f_cpu = 20000000L
 lib_deps =
     ${env.lib_deps}
     greiman/SdFat
+
+[env:mega2560]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+
+lib_deps =
+    ${env.lib_deps}
+    greiman/SdFat
