neopixel on gcm4 board enabled

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ board = adafruit_grandcentral_m4
 lib_deps =
     ${env.lib_deps}
     adafruit/SdFat - Adafruit Fork
+    adafruit/Adafruit NeoPixel
 
 
 [env:adafruit_feather_nrf52832]
