--- a/platformio.ini
+++ b/platformio.ini
@@ -82,3 +82,10 @@ framework = arduino
 lib_deps =
     ${env.lib_deps}
     greiman/SdFat
+
+[env:atmega8515_8Mhz]
+platform = atmelavr
+board = ATmega8515
+
+board_build.mcu = atmega8515
+board_build.f_cpu=8000000L
