More documentation and more E targets

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ build_unflags =
 build_flags =
    -std=gnu++17
    -O2
-
+# Full system emulation targets
 [env:desktop]
 platform = native
 
@@ -83,9 +83,102 @@ lib_deps =
     ${env.lib_deps}
     greiman/SdFat
 
-[env:atmega8515_8Mhz]
+
+# CPU Replacement designs via EBI
+# Breakdown: Type Exy
+# E -> Emulated Processor (always there)
+# x -> Core running the emulation (AVR, ARM, RISCV, etc)
+# y -> Bus Width
+#      1 -> 24-bit (16 Megabyte canonical upper and lower halves)
+#      2 -> 32-bit (full address space)
+# So for example: Type EAVR1
+# Emulation using an AVR Core with a 24-bit bus, underlying core is not important
+#
+
+[env:Type_EAVR1_8515_8Mhz]
 platform = atmelavr
 board = ATmega8515
 
 board_build.mcu = atmega8515
 board_build.f_cpu=8000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR1
+
+[env:Type_EAVR1_8515_16Mhz]
+platform = atmelavr
+board = ATmega8515
+
+board_build.mcu = atmega8515
+board_build.f_cpu=16000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR1
+
+[env:Type_EAVR1_162_8Mhz]
+platform = atmelavr
+board = ATmega162
+
+board_build.mcu = atmega162
+board_build.f_cpu=8000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR1
+
+[env:Type_EAVR1_162_16Mhz]
+platform = atmelavr
+board = ATmega162
+
+board_build.mcu = atmega162
+board_build.f_cpu=16000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR1
+
+[env:Type_EAVR2_1281_8Mhz]
+platform = atmelavr
+board = ATmega1281
+
+board_build.mcu = atmega1281
+board_build.f_cpu = 8000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR2
+
+[env:Type_EAVR2_1281_16Mhz]
+platform = atmelavr
+board = ATmega1281
+
+board_build.mcu = atmega1281
+board_build.f_cpu = 16000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR2
+
+[env:Type_EAVR2_2561_8Mhz]
+platform = atmelavr
+board = ATmega2561
+
+board_build.mcu = atmega2561
+board_build.f_cpu = 8000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR2
+
+[env:Type_EAVR2_2561_16Mhz]
+platform = atmelavr
+board = ATmega2561
+
+board_build.mcu = atmega2561
+board_build.f_cpu = 16000000L
+build_flags =
+    ${env.build_flags}
+    -DCPU_REPLACEMENT_CORE
+    -DEAVR2
