Refine everything and add more differentiation for E types

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,17 +85,21 @@ lib_deps =
 
 
 # CPU Replacement designs via EBI
-# Breakdown: Type Exy
+# Breakdown: Type Exyz
 # E -> Emulated Processor (always there)
 # x -> Core running the emulation (AVR, ARM, RISCV, etc)
 # y -> Bus Width
 #      1 -> 24-bit (16 Megabyte canonical upper and lower halves)
 #      2 -> 32-bit (full address space)
-# So for example: Type EAVR1
-# Emulation using an AVR Core with a 24-bit bus, underlying core is not important
+# z -> Bus Communication Style
+#      e -> EBI
+#      s -> SPI
+#      i -> i2c
+# So for example: Type EAVR1e
+# Emulation using an AVR Core with a 24-bit bus, communication over EBI
 #
 
-[env:Type_EAVR1_8515_8Mhz]
+[env:Type_EAVR1e_8515_8Mhz]
 platform = atmelavr
 board = ATmega8515
 
@@ -103,10 +107,11 @@ board_build.mcu = atmega8515
 board_build.f_cpu=8000000L
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR1
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS24
+    -DEBI_COMMUNICATION
 
-[env:Type_EAVR1_8515_16Mhz]
+[env:Type_EAVR1e_8515_16Mhz]
 platform = atmelavr
 board = ATmega8515
 
@@ -114,21 +119,24 @@ board_build.mcu = atmega8515
 board_build.f_cpu=16000000L
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR1
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS24
+    -DEBI_COMMUNICATION
 
-[env:Type_EAVR1_162_8Mhz]
+[env:Type_EAVR1e_162_8Mhz]
 platform = atmelavr
 board = ATmega162
 
 board_build.mcu = atmega162
 board_build.f_cpu=8000000L
+
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR1
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS24
+    -DEBI_COMMUNICATION
 
-[env:Type_EAVR1_162_16Mhz]
+[env:Type_EAVR1e_162_16Mhz]
 platform = atmelavr
 board = ATmega162
 
@@ -136,10 +144,13 @@ board_build.mcu = atmega162
 board_build.f_cpu=16000000L
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR1
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS24
+    -DEBI_COMMUNICATION
 
-[env:Type_EAVR2_1281_8Mhz]
+
+
+[env:Type_EAVR2e_1281_8Mhz]
 platform = atmelavr
 board = ATmega1281
 
@@ -147,10 +158,11 @@ board_build.mcu = atmega1281
 board_build.f_cpu = 8000000L
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR2
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DEBI_COMMUNICATION
 
-[env:Type_EAVR2_1281_16Mhz]
+[env:Type_EAVR2e_1281_16Mhz]
 platform = atmelavr
 board = ATmega1281
 
@@ -158,10 +170,11 @@ board_build.mcu = atmega1281
 board_build.f_cpu = 16000000L
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR2
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DEBI_COMMUNICATION
 
-[env:Type_EAVR2_2561_8Mhz]
+[env:Type_EAVR2e_2561_8Mhz]
 platform = atmelavr
 board = ATmega2561
 
@@ -169,10 +182,11 @@ board_build.mcu = atmega2561
 board_build.f_cpu = 8000000L
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR2
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DEBI_COMMUNICATION
 
-[env:Type_EAVR2_2561_16Mhz]
+[env:Type_EAVR2e_2561_16Mhz]
 platform = atmelavr
 board = ATmega2561
 
@@ -180,5 +194,30 @@ board_build.mcu = atmega2561
 board_build.f_cpu = 16000000L
 build_flags =
     ${env.build_flags}
-    -DCPU_REPLACEMENT_CORE
-    -DEAVR2
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DEBI_COMMUNICATION
+
+[env:Type_EAVR2s_1284p_16Mhz]
+platform = atmelavr
+board = ATmega162
+
+board_build.mcu = atmega162
+board_build.f_cpu=16000000L
+build_flags =
+    ${env.build_flags}
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DSPI_COMMUNICATION
+
+[env:Type_EAVR2s_1284p_20Mhz]
+platform = atmelavr
+board = ATmega1284P
+
+board_build.mcu = atmega1284p
+board_build.f_cpu=20000000L
+build_flags =
+    ${env.build_flags}
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DSPI_COMMUNICATION
