--- a/platformio.ini
+++ b/platformio.ini
@@ -102,6 +102,7 @@ lib_deps =
 [env:Type_EAVR1e_8515_8Mhz]
 platform = atmelavr
 board = ATmega8515
+framework = arduino
 
 board_build.mcu = atmega8515
 board_build.f_cpu=8000000L
@@ -114,6 +115,7 @@ build_flags =
 [env:Type_EAVR1e_8515_16Mhz]
 platform = atmelavr
 board = ATmega8515
+framework = arduino
 
 board_build.mcu = atmega8515
 board_build.f_cpu=16000000L
@@ -126,6 +128,7 @@ build_flags =
 [env:Type_EAVR1e_162_8Mhz]
 platform = atmelavr
 board = ATmega162
+framework = arduino
 
 board_build.mcu = atmega162
 board_build.f_cpu=8000000L
@@ -139,6 +142,7 @@ build_flags =
 [env:Type_EAVR1e_162_16Mhz]
 platform = atmelavr
 board = ATmega162
+framework = arduino
 
 board_build.mcu = atmega162
 board_build.f_cpu=16000000L
@@ -153,6 +157,7 @@ build_flags =
 [env:Type_EAVR2e_1281_8Mhz]
 platform = atmelavr
 board = ATmega1281
+framework = arduino
 
 board_build.mcu = atmega1281
 board_build.f_cpu = 8000000L
@@ -165,6 +170,7 @@ build_flags =
 [env:Type_EAVR2e_1281_16Mhz]
 platform = atmelavr
 board = ATmega1281
+framework = arduino
 
 board_build.mcu = atmega1281
 board_build.f_cpu = 16000000L
@@ -177,6 +183,7 @@ build_flags =
 [env:Type_EAVR2e_2561_8Mhz]
 platform = atmelavr
 board = ATmega2561
+framework = arduino
 
 board_build.mcu = atmega2561
 board_build.f_cpu = 8000000L
@@ -189,6 +196,7 @@ build_flags =
 [env:Type_EAVR2e_2561_16Mhz]
 platform = atmelavr
 board = ATmega2561
+framework = arduino
 
 board_build.mcu = atmega2561
 board_build.f_cpu = 16000000L
@@ -201,6 +209,7 @@ build_flags =
 [env:Type_EAVR2s_1284p_16Mhz]
 platform = atmelavr
 board = ATmega162
+framework = arduino
 
 board_build.mcu = atmega162
 board_build.f_cpu=16000000L
@@ -213,6 +222,7 @@ build_flags =
 [env:Type_EAVR2s_1284p_20Mhz]
 platform = atmelavr
 board = ATmega1284P
+framework = arduino
 
 board_build.mcu = atmega1284p
 board_build.f_cpu=20000000L
