Update readme, license, and platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = desktop, adafruit_grandcentral_m4
+default_envs = EAVR1e_8515_8Mhz
 
 [common]
 
@@ -7,85 +7,12 @@ default_envs = desktop, adafruit_grandcentral_m4
 build_unflags =
     -std=gnu++11
     -std=gnu++14
-    -Os
-    ; -flto
 
 build_flags =
    -std=gnu++17
-   -O2
-# Full system emulation targets
-[env:desktop]
-platform = native
-
-build_flags =
-    ${env.build_flags}
-    -DDESKTOP_BUILD
-
-
-[env:adafruit_grandcentral_m4]
-platform = atmelsam
-framework = arduino
-
-board = adafruit_grandcentral_m4
-lib_deps =
-    ${env.lib_deps}
-    adafruit/SdFat - Adafruit Fork
-    adafruit/Adafruit NeoPixel
-
-
-[env:adafruit_feather_nrf52832]
-platform = nordicnrf52
-board = adafruit_feather_nrf52832
-framework = arduino
-build_flags =
-    ${env.build_flags}
-    -DARDUINO_NRF52832_FEATHER
-
-lib_deps =
-    ${env.lib_deps}
-    Wire
-    greiman/SdFat
-    adafruit/Adafruit BusIO
-    adafruit/Adafruit GFX Library
-    adafruit/Adafruit ILI9341
-    solderparty/TSC2004
-    adafruit/Adafruit NeoPixel
-
-[env:adafruit_feather_m0_adalogger]
-platform = atmelsam
-board = adafruit_feather_m0
-framework = arduino
-build_flags =
-    ${env.build_flags}
-    -DARDUINO_FEATHER_M0_ADALOGGER
-
-lib_deps =
-    ${env.lib_deps}
-    greiman/SdFat
-
-[env:1284p]
-platform = atmelavr
-board = ATmega1284P
-framework = arduino
-board_build.mcu = atmega1284p
-board_build.f_cpu = 20000000L
-
-lib_deps =
-    ${env.lib_deps}
-    greiman/SdFat
-
-[env:mega2560]
-platform = atmelavr
-board = megaatmega2560
-framework = arduino
-
-lib_deps =
-    ${env.lib_deps}
-    greiman/SdFat
-
 
 # CPU Replacement designs via EBI
-# Breakdown: Type Exyz
+# Breakdown: Exyz
 # E -> Emulated Processor (always there)
 # x -> Core running the emulation (AVR, ARM, RISCV, etc)
 # y -> Bus Width
@@ -99,7 +26,7 @@ lib_deps =
 # Emulation using an AVR Core with a 24-bit bus, communication over EBI
 #
 
-[env:Type_EAVR1e_8515_8Mhz]
+[env:EAVR1e_8515_8Mhz]
 platform = atmelavr
 board = ATmega8515
 framework = arduino
@@ -112,7 +39,7 @@ build_flags =
     -DBUS24
     -DEBI_COMMUNICATION
 
-[env:Type_EAVR1e_8515_16Mhz]
+[env:EAVR1e_8515_16Mhz]
 platform = atmelavr
 board = ATmega8515
 framework = arduino
@@ -125,7 +52,7 @@ build_flags =
     -DBUS24
     -DEBI_COMMUNICATION
 
-[env:Type_EAVR1e_162_8Mhz]
+[env:EAVR1e_162_8Mhz]
 platform = atmelavr
 board = ATmega162
 framework = arduino
@@ -139,7 +66,7 @@ build_flags =
     -DBUS24
     -DEBI_COMMUNICATION
 
-[env:Type_EAVR1e_162_16Mhz]
+[env:EAVR1e_162_16Mhz]
 platform = atmelavr
 board = ATmega162
 framework = arduino
@@ -154,7 +81,7 @@ build_flags =
 
 
 
-[env:Type_EAVR2e_1281_8Mhz]
+[env:EAVR2e_1281_8Mhz]
 platform = atmelavr
 board = ATmega1281
 framework = arduino
@@ -167,7 +94,7 @@ build_flags =
     -DBUS32
     -DEBI_COMMUNICATION
 
-[env:Type_EAVR2e_1281_16Mhz]
+[env:EAVR2e_1281_16Mhz]
 platform = atmelavr
 board = ATmega1281
 framework = arduino
@@ -180,7 +107,7 @@ build_flags =
     -DBUS32
     -DEBI_COMMUNICATION
 
-[env:Type_EAVR2e_2561_8Mhz]
+[env:EAVR2e_2561_8Mhz]
 platform = atmelavr
 board = ATmega2561
 framework = arduino
@@ -193,7 +120,7 @@ build_flags =
     -DBUS32
     -DEBI_COMMUNICATION
 
-[env:Type_EAVR2e_2561_16Mhz]
+[env:EAVR2e_2561_16Mhz]
 platform = atmelavr
 board = ATmega2561
 framework = arduino
@@ -206,7 +133,7 @@ build_flags =
     -DBUS32
     -DEBI_COMMUNICATION
 
-[env:Type_EAVR2s_1284p_16Mhz]
+[env:EAVR2s_1284p_16Mhz]
 platform = atmelavr
 board = ATmega162
 framework = arduino
@@ -219,7 +146,7 @@ build_flags =
     -DBUS32
     -DSPI_COMMUNICATION
 
-[env:Type_EAVR2s_1284p_20Mhz]
+[env:EAVR2s_1284p_20Mhz]
 platform = atmelavr
 board = ATmega1284P
 framework = arduino
