Add mega2560 mcu and devboard support

--- a/platformio.ini
+++ b/platformio.ini
@@ -133,6 +133,44 @@ build_flags =
     -DBUS32
     -DEBI_COMMUNICATION
 
+[env:EAVR2e_2560_8Mhz]
+platform = atmelavr
+board = ATmega2560
+framework = arduino
+
+board_build.mcu = atmega2560
+board_build.f_cpu = 8000000L
+build_flags =
+    ${env.build_flags}
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DEBI_COMMUNICATION
+
+[env:EAVR2e_2560_16Mhz]
+platform = atmelavr
+board = ATmega2560
+framework = arduino
+
+board_build.mcu = atmega2560
+board_build.f_cpu = 16000000L
+build_flags =
+    ${env.build_flags}
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DEBI_COMMUNICATION
+
+
+[env:EAVR2e_ArduinoMega2560]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+
+build_flags =
+    ${env.build_flags}
+    -DI960_CPU_REPLACEMENT_CORE
+    -DBUS32
+    -DEBI_COMMUNICATION
+
 [env:EAVR2s_1284p_16Mhz]
 platform = atmelavr
 board = ATmega162
