Default to the Arduino Mega for now
I need to first make sure that everything is working first

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = EAVR1e_8515_8Mhz
+default_envs = EAVR2e_ArduinoMega2560
 
 [common]
 
@@ -7,9 +7,10 @@ default_envs = EAVR1e_8515_8Mhz
 build_unflags =
     -std=gnu++11
     -std=gnu++14
-
+    -Os
 build_flags =
    -std=gnu++17
+   -Ofast
 
 # CPU Replacement designs via EBI
 # Breakdown: Exyz
