Onboard program embedded in separate file

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ build_flags =
 
 [env:EAVR2e_ArduinoMega2560]
 platform = atmelavr
-board = megaatmega2560
+board = ATmega2560
 framework = arduino
 
 build_flags =
