--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,10 @@ default_envs = EAVR2e_ArduinoMega2560
 build_unflags =
     -std=gnu++11
     -std=gnu++14
-   ; -Os
+    -Os
 build_flags =
    -std=gnu++17
-   ;-Ofast
+   -Ofast
 
 # CPU Replacement designs via EBI
 # Breakdown: Exyz
