Use a custom rolled gcc 11.2 toolchain

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,13 @@ build_unflags =
     -std=gnu++11
     -std=gnu++14
     -Os
+    ;-flto
 build_flags =
    -std=gnu++17
    -Ofast
+
+#platform_packages = platformio/toolchain-atmelavr@^3.70300.220127
+platform_packages = platformio/toolchain-atmelavr@file:///home/jwscoggins/sys/toolchains/avr-gcc-11.2.0
 
 # CPU Replacement designs via EBI
 # Breakdown: Exyz
